objects/CS_Solution_Group__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Certificate_Codes__c</fullName>
        <label>Certificate Codes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DisplayOrder__c</fullName>
        <label>DisplayOrder</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <label>CS Solution Group</label>
</CustomObject>